--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 body{
-	background-color: #000054;
+    background:#2f3051;
+    font-family:Helvetica;
+    font-size: 12px;
+    font-style: italic;
+    letter-spacing:-1px;
+    width:12000px;
+    position:absolute;
+    top:0px;
+    left:0px;
+    bottom:0px;
 }
 
 a{
@@ -7,6 +16,11 @@ a{
 }
 
 h1{
+	color: white;
+}
+
+h2{
+	margin-left: -50px;
 	color: white;
 }
 
@@ -21,17 +35,7 @@ h1{
 	margin: .5%;
 	cursor: pointer;
 }
-.spacertile{
-	border: thin solid white;
-	display: inline-block;
-	height: 80px;
-	width: 140px;
-	padding-top: 40px;
-	background-color: green;
-	text-align: center;
-	margin: .5%;
-	cursor: pointer;
-}
+
 
 .tile a{
 	color: white;
@@ -41,4 +45,67 @@ h1{
 
 .tile:hover{
 	background-color: purple;
+}
+
+.tileSection{
+	float: left;
+	width: 500px;
+}
+
+.section{
+    margin-left: 50px;
+    bottom:0px;
+    width:850px;
+    float:left;
+    height:100%;
+    
+}
+.section h2{
+    margin:50px 0px 30px 50px;
+}
+.section p{
+    margin:20px 0px 0px 50px;
+    width:600px;
+}
+.black{
+    color:#fff;
+   
+    background:inherit;
+}
+.white{
+    color:#000;
+    background:#fff url(../images/white.jpg) no-repeat top right;
+}
+
+.section ul{
+    list-style:none;
+    margin:20px 0px 0px 550px;
+}
+.black ul li{
+    float:left;
+    padding:5px;
+    margin:5px;
+    color:#aaa;
+}
+.black ul li a{
+    display:block;
+    color:#f0f0f0;
+}
+.black ul li a:hover{
+    text-decoration:none;
+    color:#fff;
+}
+.white ul li{
+    float:left;
+    padding:5px;
+    margin:5px;
+    color:#aaa;
+}
+.white ul li a{
+    display:block;
+    color:#222;
+}
+.white ul li a:hover{
+    text-decoration:none;
+    color:#000;
 }
