--- a/style.css
+++ b/style.css
@@ -5,20 +5,27 @@ body{
     font-style: italic;
     letter-spacing:-1px;
     width:12000px;
+    height:500px;
     position:absolute;
     top:0px;
     left:0px;
     bottom:0px;
-    background-image: url("./images/dtile.gif");
+    background-image: url("./images/btile.gif");
 }
 
 a{
 	text-decoration: none;
 }
 
-h1{
+.title{
 	color: white;
 	position: fixed;
+	margin-left: 50px;
+}
+
+.title img{
+	height: 100px;
+	width: 400px;
 }
 
 h2{
@@ -34,6 +41,7 @@ ul li{
     float:left;
     padding:5px;
     margin:5px;
+    font-weight: bolder;
     color:#aaa;
 }
 ul li a{
@@ -45,6 +53,16 @@ ul li a:hover{
     color:#fff;
 }
 
+/***********************************
+	  Navigation Bar styles
+***********************************/
+.nav{
+	position: fixed;
+}
+
+/***********************************
+		Tile styles
+***********************************/
 
 .tile{
 	/*border: thin solid white;*/
@@ -59,23 +77,6 @@ ul li a:hover{
 	box-shadow: 5px 5px 1px rgba(0,0,0,0.42);
 }
 
-.notificationTile{
-	/*border: thin solid white;*/
-	display: inline-block;
-	height: 80px;
-	width: 200px;
-	padding-top: 40px;
-	background-color: #081b75;
-	text-align: center;
-	margin: .5%;
-	cursor: pointer;
-	box-shadow: 5px 5px 1px rgba(0,0,0,0.42);
-}
-
-.nav{
-	position: fixed;
-}
-
 .tile a{
 	color: white;
 	text-align: center;
@@ -85,6 +86,31 @@ ul li a:hover{
 	background-color: #5babdd;
 }
 
+/***********************************
+	Notification Tile styles
+***********************************/
+.notificationTile{
+	/*border: thin solid white;*/
+	display: inline-block;
+	height: 80px;
+	width: 200px;
+	padding-top: 40px;
+	background-color: #081b75;
+	text-align: center;
+	color:white;
+	overflow: hidden;
+	margin-right: .5%;
+	margin-top:.5%;
+	margin-bottom: .5%;
+	cursor: pointer;
+	box-shadow: 5px 5px 1px rgba(0,0,0,0.42);
+}
+
+.notificationTile a
+
+/***********************************
+		Tile Sections
+***********************************/
 .tileSection{
 	float: left;
 	width: 500px;
