--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+html{
+	    background-image: url("./images/btile.gif");
+}
+
 body{
-    background:#2f3051;
     font-family:Helvetica;
     font-size: 12px;
     font-style: italic;
@@ -10,12 +13,15 @@ body{
     top:0px;
     left:0px;
     bottom:0px;
-    background-image: url("./images/btile.gif");
+
+    overflow: hidden;
 }
 
 a{
 	text-decoration: none;
 }
+
+
 
 .title{
 	color: white;
@@ -30,42 +36,57 @@ a{
 
 h2{
 	margin-left: -50px;
-	color: white;
+	display:block;
+    color:#fff;
+    text-shadow: 1px 1px 0px #2c2e38, 1px 1px 0px #5c5f72;
+    font: 20px 'BazarMedium';
+    letter-spacing: 2px;
 }
 
 ul{
     list-style:none;
-    margin:20px 0px 0px 550px;
+    margin:20px 0px 0px 0px;
 }
 ul li{
     float:left;
     padding:5px;
     margin:5px;
     font-weight: bolder;
+    font-size:large;
     color:#aaa;
 }
 ul li a{
     display:block;
-    color:#f0f0f0;
+    color:#fff;
+    text-shadow: 1px 1px 0px #2c2e38, 1px 1px 0px #5c5f72;
+    font: 18px 'BazarMedium';
+    letter-spacing: 2px;
 }
 ul li a:hover{
-    text-decoration:none;
+	font-weight: bolder;
+    display:block;
     color:#fff;
+    text-shadow: 1px 1px 0px #2c2e38, 1px 1px 0px #5c5f72;
+    font: 20px 'BazarMedium';
+    letter-spacing: 2px;
+    border-bottom: 4px solid #68787e;
+    
 }
 
 /***********************************
 	  Navigation Bar styles
 ***********************************/
 .nav{
+	text-align: left;
 	position: fixed;
 }
+
 
 /***********************************
 		Tile styles
 ***********************************/
 
 .tile{
-	/*border: thin solid white;*/
 	display: inline-block;
 	height: 80px;
 	width: 140px;
@@ -90,7 +111,6 @@ ul li a:hover{
 	Notification Tile styles
 ***********************************/
 .notificationTile{
-	/*border: thin solid white;*/
 	display: inline-block;
 	height: 80px;
 	width: 200px;
@@ -102,11 +122,15 @@ ul li a:hover{
 	margin-right: .5%;
 	margin-top:.5%;
 	margin-bottom: .5%;
-	cursor: pointer;
 	box-shadow: 5px 5px 1px rgba(0,0,0,0.42);
 }
 
-.notificationTile a
+.notificationTile p{
+	text-decoration: none;
+	color:white;
+	text-align: center;
+}
+
 
 /***********************************
 		Tile Sections
