--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html{
-	    background-image: url("./images/btile.gif");
+	    background-image: url("./images/backgroundCS2.png");
+	    background-attachment: fixed;
+	    background-size:  contain;
 }
 
 body{
